# macro-string

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
tests/: test.rs
tests/eval/: Cargo.toml  eval.rs
tests/ui/: no_such_file.stderr  suffixed_literal.rs  suffixed_literal.stderr  unsupported_macro.stderr
