[package]
name = "macro-string"
version = "0.0.0"
edition = "2021"

[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = ["parsing", "printing"] }

[dev-dependencies]
syn = { version = "2", default-features = false, features = ["printing"] }
