[package]
name = "macro-string"
version = "0.0.0"
edition = "2021"

[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2.0.98", default-features = false, features = ["parsing", "printing"] }

[dev-dependencies]
serde_json = "1"
syn = { version = "2", default-features = false, features = ["printing", "proc-macro"] }
