[package]
name = "macro-string"
version = "0.0.0"
edition = "2021"
rust-version = "1.61"

[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
syn = { version = "2.0.98", default-features = false, features = ["parsing", "printing"] }

[dev-dependencies]
macro-string-eval = { path = "tests/eval" }
rustversion = "1.0.19"
serde_json = "1"
syn = { version = "2", default-features = false, features = ["printing", "proc-macro"] }
trybuild = { version = "1.0.103", features = ["diff"] }

[workspace]
members = ["tests/eval"]
