[package]
name = "macro-string-eval"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/macro-string"

[lib]
proc-macro = true

[dependencies]
macro-string = { path = "../.." }
quote = "1"
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro"] }
