[package]
name = "macro-string-eval"
version = "0.0.1"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Part of test suite for macro-string crate"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/macro-string"

[lib]
path = "eval.rs"
proc-macro = true

[dependencies]
macro-string = { path = "../..", version = "0" }
quote = "1"
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
    "--extern-html-root-url=proc_macro=https://doc.rust-lang.org",
]
